[UI] Fix an overflow issue in the navbar at small resolutions

--- a/app/javascript/src/styles/common/navigation.scss
+++ b/app/javascript/src/styles/common/navigation.scss
@@ -411,6 +411,10 @@ nav.navigation, html.nav-toggled nav.navigation {
       z-index: 1;
       background: var(--color-background);
 
+      // At small resolutions, overflow can
+      // cause scrollbars to appear
+      overflow: hidden;
+
       li {
         a {
           i { color: themed("color-link"); }
